// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog collect should extract messages from source files 1`] = `
Object {
  Hello World: Object {
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        1,
      ],
      Array [
        collect/componentA/index.js,
        1,
      ],
    ],
  },
}
`;

exports[`Catalog collect should handle errors 1`] = `Object {}`;

exports[`Catalog make should collect and write catalogs 1`] = `
Object {
  cs: null,
  en: null,
}
`;

exports[`Catalog make should collect and write catalogs 2`] = `
Object {
  cs: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
  },
  en: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
  },
}
`;

exports[`Catalog make should merge with existing catalogs 1`] = `
Object {
  cs: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
}
`;

exports[`Catalog make should merge with existing catalogs 2`] = `
Object {
  cs: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: Ahoj Brno,
    },
  },
}
`;

exports[`Catalog read should read file in given format 1`] = `
Object {
  obsolete: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [],
    obsolete: true,
    origin: Array [],
    translation: Is marked as obsolete,
  },
  static: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [],
    obsolete: false,
    origin: Array [],
    translation: Static message,
  },
  veryLongString: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [],
    obsolete: false,
    origin: Array [],
    translation: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. It wasn't a dream. His room, a proper human,
  },
  withComments: Object {
    comment: undefined,
    comments: Array [
      Translator comment,
      This one might come from developer,
    ],
    flags: Array [],
    obsolete: false,
    origin: Array [],
    translation: Support translator comments separately,
  },
  withDescription: Object {
    comment: Description is comment from developers to translators,
    comments: Array [],
    flags: Array [],
    obsolete: false,
    origin: Array [],
    translation: Message with description,
  },
  withFlags: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [
      fuzzy,
      otherFlag,
    ],
    obsolete: false,
    origin: Array [],
    translation: Keeps any flags that are defined,
  },
  withMultipleOrigins: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [],
    obsolete: false,
    origin: Array [
      Array [
        src/App.js,
        4,
      ],
      Array [
        src/Component.js,
        2,
      ],
    ],
    translation: Message with multiple origin,
  },
  withOrigin: Object {
    comment: undefined,
    comments: Array [],
    flags: Array [],
    obsolete: false,
    origin: Array [
      Array [
        src/App.js,
        4,
      ],
    ],
    translation: Message with origin,
  },
}
`;

exports[`Catalog read should read file in previous format 1`] = `
Object {
  static: Object {
    message: null,
    obsolete: false,
    origin: Array [],
    translation: Static message,
  },
  veryLongString: Object {
    message: null,
    obsolete: false,
    origin: Array [],
    translation: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. It wasn't a dream. His room, a proper human,
  },
}
`;

exports[`Catalog readAll should read existing catalogs for all locales 1`] = `
Object {
  cs: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    Hello World: Object {
      comment: undefined,
      comments: Array [],
      flags: Array [],
      obsolete: false,
      origin: Array [],
      translation: Hello World,
    },
  },
}
`;

exports[`Catalog should convert catalog format 1`] = `
msgid ""
msgstr ""
"Project-Id-Version: \\n"
"Report-Msgid-Bugs-To: \\n"
"POT-Creation-Date: \\n"
"PO-Revision-Date: \\n"
"Last-Translator: \\n"
"Language: \\n"
"Language-Team: \\n"
"Content-Type: \\n"
"Content-Transfer-Encoding: \\n"
"Plural-Forms: \\n"

msgid "static"
msgstr "Static message"

msgid "veryLongString"
msgstr "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. \\"What's happened to me?\\" he thought. It wasn't a dream. His room, a proper human"
`;

exports[`cleanObsolete should remove obsolete messages from catalog 1`] = `
Object {
  Label: Object {
    obsolete: false,
    origin: Array [
      Array [
        1,
        catalog.test.ts,
      ],
    ],
    translation: Label,
  },
}
`;

exports[`getCatalogs should warn about missing {name} pattern in catalog path 1`] = `Catalog with path "./locales/{locale}" doesn't have a {name} pattern in it, but one of source directories uses it: "{name}/". Either add {name} pattern to "./locales/{locale}" or remove it from all source directories.`;

exports[`getCatalogs should warn if catalogPath is a directory 1`] = `Remove trailing slash from "./locales/{locale}/". Catalog path isn't a directory, but translation file without extension. For example, catalog path "./locales/{locale}" results in translation file "./locales/en.po".`;

exports[`getCatalogs should warn if catalogPath is a directory 2`] = `Remove trailing slash from "./locales/{locale}/". Catalog path isn't a directory, but translation file without extension. For example, catalog path "./locales/{locale}" results in translation file "./locales/cs.json".`;

exports[`order should order messages alphabetically 1`] = `
Object {
  LabelA: Object {
    obsolete: false,
    origin: Array [
      Array [
        1,
        catalog.test.ts,
      ],
    ],
    translation: A,
  },
  LabelB: Object {
    obsolete: false,
    origin: Array [
      Array [
        1,
        catalog.test.ts,
      ],
    ],
    translation: B,
  },
  LabelC: Object {
    obsolete: false,
    origin: Array [
      Array [
        1,
        catalog.test.ts,
      ],
    ],
    translation: C,
  },
  LabelD: Object {
    obsolete: false,
    origin: Array [
      Array [
        1,
        catalog.test.ts,
      ],
    ],
    translation: D,
  },
}
`;

exports[`order should order messages alphabetically 2`] = `
Array [
  LabelA,
  LabelB,
  LabelC,
  LabelD,
]
`;

exports[`order should order messages by origin 1`] = `
Object {
  LabelA: Object {
    obsolete: false,
    origin: Array [
      Array [
        file2.js,
        3,
      ],
    ],
    translation: A,
  },
  LabelB: Object {
    obsolete: false,
    origin: Array [
      Array [
        file1.js,
        2,
      ],
      Array [
        file2.js,
        2,
      ],
    ],
    translation: B,
  },
  LabelC: Object {
    obsolete: false,
    origin: Array [
      Array [
        file1.js,
        1,
      ],
    ],
    translation: C,
  },
  LabelD: Object {
    obsolete: false,
    origin: Array [
      Array [
        file2.js,
        100,
      ],
    ],
    translation: D,
  },
}
`;

exports[`order should order messages by origin 2`] = `
Array [
  LabelC,
  LabelB,
  LabelA,
  LabelD,
]
`;
